--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^2.3.3
   flutter_riverpod: ^2.4.9
   logger: ^2.0.2+1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
