--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.79"
-btleplug = "0.10.5"
+btleplug = "^0.11.5"
 flutter_rust_bridge = "2.0.0-dev.20"
 futures = "0.3.30"
 jni = "0.19.0"
