enable scan filter

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+uuid = "1.6.1"
 anyhow = "1.0.79"
 btleplug = "^0.11.5"
 flutter_rust_bridge = "2.0.0-dev.20"
